<resources>
    <string name="app_name">Spend Hound</string>
    <string name="title_home">Home</string>
    <string name="title_borrow">Borrow</string>
    <string name="title_profile">Profile</string>
    <string name="hint_username">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="text_keep_logged_in">Keep me logged in</string>
    <string name="text_sign_up">Sign up here</string>
    <string name="text_no_account">Don\'t have an account? </string>
    <string name="default_web_client_id">1036031691832-bj2a27go248odv58gfkcqb7dfudl65k8.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">Profile</string>
    <string name="settings_icon_description">Settings</string>
    <string name="profile_image_description">User\'s profile image</string>
    <string name="nickname_label">Nickname:</string>
    <string name="nickname_placeholder">Waray</string>
    <string name="edit_nickname_description">Edit nickname</string>
    <string name="save_nickname_description">Save nickname</string>
    <string name="total_balance_label">Total Balance:</string>
    <string name="total_balance_placeholder">₱ 5,500.00</string>
    <string name="chip_icon_description">Credit card chip icon</string>
    <string name="card_background_description">Background image for the card</string>
    <string name="balance_label">Balance</string>
    <string name="unpaid_label">Unpaid</string>
    <string name="owe_label">Receivable</string>
    <string name="debt_label">My Debt</string>
    <string name="recent_notifications_label">Recent Notifications</string>
    <string name="logout_button_text">Log out</string>
    <string name="add_new_transaction_description">Add a new transaction</string>
    <string name="borrow_money_title">Borrow List</string>
    <string name="month_year_label">Month &amp; Year</string>
    <string name="status_label">Status</string>
    <string name="select_all_label">Select All</string>
    <string name="select_all_checkbox_description">Select all items</string>
    <string name="no_debt_data_message">No Debt Data!</string>
    <string name="no_owed_data_message">No Owed Data!</string>
    <string name="borrow_now_button">Borrow Now</string>
    <string name="pay_now_button">Pay Now</string>
    <string name="cancel_button">Cancel</string>
    <string name="select_button">Select</string>
    <string name="pending_status_button">Pending status</string>
    <string name="tooltip_add_transaction_text">Tap to add transaction</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="transactionList">Transaction List</string>
    <string name="viewAll_transactions">View all ></string>
    <string name="app_logo_description">App logo</string>
    <string name="tagline">Track Expenses Effortlessly</string>
    <string name="breakdown_title">Financial Breakdown</string>
    <string name="breakdown_close_description">Close</string>
    <string name="breakdown_tab_balance">Balance</string>
    <string name="breakdown_tab_unpaid">Unpaid</string>
    <string name="breakdown_tab_owe">Owe</string>
    <string name="breakdown_tab_debt">Debt</string>
    <string name="breakdown_total_balance">Total Balance</string>
    <string name="breakdown_amount_placeholder">₱ 0.00</string>
    <string name="breakdown_details_label">Details</string>
    <string name="breakdown_no_transactions">No transactions found</string>
    <string name="empty_state_icon_description">Empty state icon</string>
    <string name="breakdown_person_placeholder">Person Name</string>
    <string name="breakdown_date_placeholder">January 1, 2024</string>
    <string name="breakdown_description_placeholder">Description</string>
    <string name="breakdown_status_pending">Pending</string>
    <string-array name="transactionTypes_String">
        <item>Select what kind of bill:</item>
        <item>Rent</item>
        <item>Electricity</item>
        <item>Water</item>
        <item>Internet</item>
        <item>Groceries</item>
        <item>Foods</item>
        <item>Online Shopping</item>
        <item>Travel</item>
        <item>House Necessity</item>
        <item>Transportation</item>
        <item>Others</item>
    </string-array>
    <string-array name="borrowStatus_String">
        <item>All</item>
        <item>Unpaid</item>
        <item>Paid</item>
        <item>Paid Partially</item>
        <item>Pending Payment</item>
        <item>For Lender Approval</item>
    </string-array>
    <string-array name="checkboxStatus_String">
        <item>Unpaid</item>
        <item>Paid Partially</item>
    </string-array>
    <string name="label_date">Date: </string>
    <string name="label_lender">Lender: </string>
    <string name="label_borrower">Borrower: </string>
    <string name="label_amount">Amount: </string>
    <string name="label_status">Status: </string>
    <string name="placeholder_date">January 1, 2024</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_amount">₱ 0.00</string>
    <string name="status_unpaid">Unpaid</string>
    <string name="status_paid">Paid</string>
    <string name="status_pending">Pending</string>
    <string name="status_paid_partially">Paid Partially</string>
    <string name="status_awaiting_payment_confirmation">Pending Payment</string>
    <string name="status_pending_lender_confirmation">For Lender Approval</string>
    <string name="dialog_confirm_payment_title">Confirm Payment</string>
    <string name="dialog_payment_subtitle">You are about to pay the following debts:</string>
    <string name="dialog_payment_info">Payment will be marked as For Lender Approval until the lender confirms receipt.</string>
    <string name="dialog_total_amount">Total Amount</string>
    <string name="btn_confirm_payment">Confirm</string>
    <string name="btn_processing">Processing…</string>
    <string name="toast_payment_sent">Payment request sent! Waiting for lender confirmation.</string>
    <string name="toast_payment_failed">Some payments may have failed. Please try again.</string>
    <string name="toast_no_debt_selected">No debt is selected</string>
    <string name="dialog_borrow_now_title">Borrow Now</string>
    <string name="dialog_borrow_from_label">Borrow from:</string>
    <string name="dialog_how_much_label">How much:</string>
    <string name="dialog_enter_amount_hint">Enter amount</string>
    <string name="dialog_select_lender">Select a lender:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_borrow">Borrow</string>
    <string name="toast_fill_all_fields">Please fill in all fields</string>
    <string name="toast_borrow_success">Borrow request submitted successfully!</string>
    <string name="toast_borrow_failed">Failed to submit borrow request. Please try again.</string>
    <string name="toast_no_payable_debts">No debts available for payment</string>
    <string name="empty_debt_subtitle">You don\'t have any outstanding debts</string>
    <string name="empty_owed_subtitle">No one owes you money right now</string>
    <string name="loading_text">Loading…</string>
    <string name="tab_all">All</string>
    <string name="tab_paid">Paid</string>
    <string name="tab_unpaid">Unpaid</string>
    <string name="tab_pending">Pending</string>
    <string name="btn_not_yet">Not Yet</string>
    <string name="btn_received">Received</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_approved">Approved</string>
    <string name="btn_pay">Pay</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_try_again">Try Again</string>
    <string name="confirm_not_yet_title">Mark as Not Yet Received</string>
    <string name="confirm_not_yet_message">This will revert the payment status back to Unpaid. Are you sure?</string>
    <string name="confirm_received_title">Confirm Payment Received</string>
    <string name="confirm_received_message">This will mark the payment as Paid. Are you sure you received this payment?</string>
    <string name="confirm_decline_title">Decline Borrow Request</string>
    <string name="confirm_decline_message">Are you sure you want to decline this borrow request?</string>
    <string name="confirm_approve_title">Approve Borrow Request</string>
    <string name="confirm_approve_message">This will approve the borrow request and mark it as Unpaid. Are you sure?</string>
    <string name="confirm_pay_title">Send Payment</string>
    <string name="confirm_pay_message">This will send a payment request to the lender for confirmation. Are you sure?</string>
    <string name="confirm_remove_title">Remove Transaction</string>
    <string name="confirm_remove_message">This will permanently remove this transaction from your list. Are you sure?</string>
    <string name="confirm_try_again_title">Resubmit Request</string>
    <string name="confirm_try_again_message">This will resubmit the borrow request for lender approval. Are you sure?</string>
    <string name="status_declined">Declined</string>
    <string name="status_removed">Removed</string>
    <string name="status_for_lender_approval">For Lender Approval</string>
    <string name="status_pending_payment">Pending Payment</string>
    <string name="label_payment_sent">Sent: </string>
    <string name="payment_sent_format">Sent: %1$s</string>
    <string name="toast_status_updated">Status updated successfully</string>
    <string name="toast_status_update_failed">Failed to update status. Please try again.</string>
    <string name="label_borrow_money">Borrow Money</string>
    <string name="label_add_transaction">Add Transaction</string>
    <string name="label_fab_groups">My Groups</string>
    <string name="label_fab_borrow">Borrow</string>
    <string name="label_fab_expense">Expense</string>
    <string name="label_fab_settle">Settle</string>
    <string name="label_fab_group">Groups</string>
    <string name="members_format">Members: %1$s</string>
    <string name="back_button">Back</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_subtitle">Enter your details to get started</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="label_transactions">Transactions</string>
    <string name="label_groups">Groups</string>
    <string name="label_borrowed">Borrowed</string>
    <string name="label_my_groups">MY GROUPS</string>
    <string name="label_see_all_groups">See all groups</string>
    <string name="label_my_crew">MY CREW</string>
    <string name="label_add_crew">+ Add crew</string>
    <string name="label_see_all_crew">See all crew</string>
    <string name="label_invite_user">Invite User</string>
    <string name="label_add_guest">Add Guest</string>
    <string name="label_crew_pending_invites">Pending Invites</string>
    <string name="label_preferences">PREFERENCES</string>
    <string name="label_currency">Currency</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_push_alerts">Push alerts for new debts</string>
    <string name="label_dark_mode">Dark mode</string>
    <string name="label_account">ACCOUNT</string>
    <string name="label_change_pin">Change PIN / password</string>
    <string name="label_export_data">Export my data</string>
    <string name="label_download_csv">Download as CSV</string>
    <string name="label_footer">SpendHound v1.0 · Privacy Policy</string>
</resources>