<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/whitest">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratalternatess_regular"
            android:text="@string/label_date"
            android:layout_gravity="center|end"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratalternatess_regular"
            android:text="@string/placeholder_date"
            android:layout_gravity="center|end"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratalternatess_regular"
            android:text="@string/label_borrower"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/borrower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratalternatess_regular"
            android:text="@string/placeholder_name"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratalternatess_regular"
        android:text="@string/dialog_borrow_from_label"
        android:textColor="@color/darkBlue"
        android:layout_marginTop="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lenderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:orientation="horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratalternatess_regular"
        android:text="@string/dialog_how_much_label"
        android:textColor="@color/darkBlue"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/borrowEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/glassy_background"
        android:elevation="3dp"
        android:fontFamily="@font/montserratalternatess_regular"
        android:hint="@string/dialog_enter_amount_hint"
        android:inputType="number"
        android:paddingVertical="12dp"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/borrowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:elevation="3dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserratalternatess_bold"
        android:paddingVertical="16dp"
        android:text="@string/btn_borrow"
        android:textColor="@color/whitest" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/CustomProgressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/glassy_background"
            android:padding="20dp"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>
